@@ -6,6 +6,8 @@ eZ Online Editor 5.0 extension Changelog
 * Fixed: Some strings in table dialog where not using i18n().
 * Show more editor frindly names on xml tags in path ( tr -> table row )
 * Fixed #013402: OE problem if ezxmlfield is required /empty andAdd object (objectrelation) is clicked
+* Only allow image selections in browse and bookmark node lists when image button is pressed
+* Fixed regression in image popup: search did not filter on image classes
 
 
 5.0rc
